added teleop using automotive hardware and sialib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
 )
 
+find_package(Sialib)
+
 catkin_package(
   INCLUDE_DIRS include
   CATKIN_DEPENDS geometry_msgs joy roscpp sensor_msgs
@@ -25,11 +27,32 @@ set(SIA_TELEOP_SOURCES
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
+  ${SIALIB_INCLUDE_DIRS}
 )
 
-add_executable(sia_teleop_joy ${SIA_TELEOP_SOURCES} src/AckermannToDiffdriveTeleopJoy.cpp)
-target_link_libraries(sia_teleop_joy ${catkin_LIBRARIES})
+# Joy
+add_executable(sia_teleop_joy 
+  ${SIA_TELEOP_SOURCES} 
+  src/AckermannToDiffdriveTeleopJoy.cpp)
+
+target_link_libraries(sia_teleop_joy 
+  ${catkin_LIBRARIES})
+
 add_dependencies(sia_teleop_joy ${catkin_EXPORTED_TARGETS})
+
+# SiA for control using s32k148 board and automotive hardware
+if(${SIALIB_FOUND})
+  add_executable(sia_teleop 
+    ${SIA_TELEOP_SOURCES} 
+    src/AckermannToDiffdriveTeleopSiA.cpp)
+
+  target_link_libraries(sia_teleop
+    ${catkin_LIBRARIES} 
+    ${SIALIB_LIBRARIES})
+
+  add_dependencies(sia_teleop ${catkin_EXPORTED_TARGETS})
+endif()
+
 
 #############
 ## Install ##
@@ -38,8 +61,14 @@ add_dependencies(sia_teleop_joy ${catkin_EXPORTED_TARGETS})
 ## Mark executables for installation
 install(TARGETS 
   sia_teleop_joy
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+if(${SIALIB_FOUND})
+  install(TARGETS 
+    sia_teleop
+    RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+endif()
+
 
 ## Mark headers for installation
 install(DIRECTORY include/${PROJECT_NAME}/
